--- a/index.html
+++ b/index.html
@@ -14,6 +14,148 @@
     />
     <meta name="author" content="Wesley Alencar, Lorenzo Panato" />
     <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="navbar custom-nav">
+        <div class="container-fluid">
+          <a class="navbar-brand custom-logo" href="#">NOTIFICA</a>
+          <button
+            class="navbar-toggler bg-transparent border-0 text-white"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasNavbar"
+            aria-controls="offcanvasNavbar"
+            aria-label="Toggle navigation"
+            style="outline: none"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="50"
+              height="50"
+              fill="currentColor"
+              class="bi bi-list"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"
+              />
+            </svg>
+          </button>
+          <div
+            class="offcanvas offcanvas-end"
+            tabindex="-1"
+            id="offcanvasNavbar"
+            aria-labelledby="offcanvasNavbarLabel"
+          >
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+                NOTIFICA
+              </h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="offcanvas"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#introduction">Introdução</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#about">Sobre a ODS 6</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#features">Funcionalidades</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <section id="introduction" class="introduction">
+        <h1>Relate, Contribua, Transforme.</h1>
+        <p>
+          Seja parte da mudança: Junte-se a nós na melhoria do abastecimento de
+          água e saneamento em sua comunidade. Relate problemas em tempo real,
+          contribua para soluções eficazes e transforme positivamente o ambiente
+          ao seu redor.
+        </p>
+        <a type="button" href="#about" class="btn btn-outline-light"
+          >Explorar</a
+        >
+      </section>
+      <section id="about" class="about">
+        <h2>Água Potável e Saneamento</h2>
+        <img
+          src="./assets/map.png"
+          alt="Mapa de domícilios com rede geral ou fossa ligada a rede %"
+        />
+        <p>
+          Seja parte da mudança: Junte-se a nós na melhoria do abastecimento de
+          água e saneamento em sua comunidade. Relate problemas em tempo real,
+          contribua para soluções eficazes e transforme positivamente o ambiente
+          ao seu redor.
+        </p>
+      </section>
+      <section id="features" class="features">
+        <div class="card custom-card border-0">
+          <img src="./assets/dash.png" alt="Icone de dashboard" />
+          <h2>Relatórios</h2>
+          <p>
+            "Sistema BI especializado em denúncias do ODS 6, oferecendo análises
+            precisas para garantir a gestão sustentável de água e saneamento."
+          </p>
+        </div>
+        <div class="card custom-card border-0">
+          <img
+            src="./assets/location.png"
+            alt="Icone de ponto de localização"
+          />
+          <h2>Geolocalização</h2>
+          <p>
+            “Integração de geolocalização permite identificar com precisão o
+            local da denúncia, facilitando a ação rápida e efetiva.”
+          </p>
+        </div>
+        <div class="card custom-card border-0">
+          <img src="./assets/complaint.png" alt="Icone de dashboard" />
+          <h2>Denúncias</h2>
+          <p>
+            “Usuários podem reportar violações relacionadas à ODS 6, como má
+            qualidade da água, falta de saneamento, e práticas prejudiciais ao
+            meio ambiente.”
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer>© Todos os direitos reservados.</footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
