feat: add responsiveness to header

--- a/index.html
+++ b/index.html
@@ -31,8 +31,16 @@
       <nav class="navbar custom-nav">
         <div class="container-fluid">
           <a class="navbar-brand custom-logo" href="#">NOTIFICA</a>
+
+          <nav class="custom-navbar" id="nav-light">
+            <a href="#introduction" class="btn btn-outline-light">Introdução</a>
+            <a href="#about" class="btn btn-outline-light">Sobre a ODS 6</a>
+            <a href="#features" class="btn btn-outline-light">Funcionalidades</a>
+            <a href="#" class="btn btn-outline-light active">Acessar</a>
+          </nav>
+
           <button
-            class="navbar-toggler bg-transparent border-0 text-white"
+            class="navbar-toggler bg-transparent border-0 text-white custom-menu-hamburguer"
             type="button"
             data-bs-toggle="offcanvas"
             data-bs-target="#offcanvasNavbar"
