--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>NOTIFICA</title>
     <meta
       name="description"
       content="NOFITICA - Denuncias de saneamento e abastecimento."
     />
+    <link rel="icon" type="image/x-icon" href="./assets/leaf.png" />
     <meta
       name="keywords"
       content="denuncia, abastecimento de água, sanemaneto básico, ODS 6"
