--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       content="denuncia, abastecimento de água, sanemaneto básico, ODS 6"
     />
     <meta name="author" content="Wesley Alencar, Lorenzo Panato" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/css/global.css" />
+    <link rel="stylesheet" href="./styles/css/index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
