--- a/pages/register.html
+++ b/pages/register.html
@@ -15,7 +15,7 @@
     />
     <meta name="author" content="Wesley Alencar, Lorenzo Panato" />
     <link rel="stylesheet" href="./styles/css/global.css" />
-    <link rel="stylesheet" href="../styles/css/login.css" />
+    <link rel="stylesheet" href="../styles/css/register.css" />
     <link rel="stylesheet" href="../styles/css/form.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -31,27 +31,19 @@
 <body>
     <main>
         <h1>NOTIFICA</h1>
-        <h2>Entrar</h2>
+        <h2>Cadastrar</h2>
 
         <form class="form-container">
-          <div class="mb-3">
-            <input type="text" class="form-control custom-input" id="formGroupExampleInput" placeholder="Nome" required>
-          </div>
-          <div class="mb-3">
-            <input type="tel" class="form-control custom-input" id="formGroupExampleInput2" placeholder="Telefone" required>
-          </div>
-          <div class="mb-3">
-            <input type="text" class="form-control custom-input" id="formGroupExampleInput2" placeholder="CPF" required>
-          </div>
-          <div class="mb-3">
-            <input type="text" class="form-control custom-input" id="formGroupExampleInput2" placeholder="Senha" required>
-          </div>
-          <div class="mb-3">
-            <input type="text" class="form-control custom-input" id="formGroupExampleInput2" placeholder="Repita a senha" required>
-          </div>
+            <div class="mb-3">
+                <input type="text" class="form-control custom-input" id="formGroupExampleInput" placeholder="CPF ou telefone" required>
+            </div>
+            <div class="mb-3">
+                <input type="text" class="form-control custom-input" id="formGroupExampleInput2" placeholder="Senha" required>
+            </div>
 
-          <p>Já tem uma conta? <a href="#">Entrar</a></p>
-          <button type="submit">Entrar</button>
+            <a href="#">Esqueceu sua senha?</a>
+            <p>Entrar sem conta? <a href="#">Entrar</a></p>
+            <button>Cadastrar</button>
         </form>
     </main>
 </body>
