refactor: sccs variables in global styles

--- a/index.html
+++ b/index.html
@@ -87,13 +87,17 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#introduction">Introdução</a>
+                  <a class="nav-link text-black" href="#introduction"
+                    >Introdução</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#about">Sobre a ODS 6</a>
+                  <a class="nav-link text-black" href="#about">Sobre a ODS 6</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#features">Funcionalidades</a>
+                  <a class="nav-link text-black" href="#features"
+                    >Funcionalidades</a
+                  >
                 </li>
               </ul>
             </div>
