refactor: add scss variables in index

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#introduction">Introdução</a>
+                  <a class="nav-link black-text" href="#introduction"
+                    >Introdução</a
+                  >
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#about">Sobre a ODS 6</a>
