refactor: links menu

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             <a href="#introduction" class="btn">Introdução</a>
             <a href="#about" class="btn">Sobre a ODS 6</a>
             <a href="#features" class="btn">Funcionalidades</a>
-            <a href="#" class="btn btn-outline-light">Acessar</a>
+            <a href="./pages/login.html" class="btn btn-outline-light"
+              >Acessar</a
+            >
           </nav>
 
           <button
@@ -96,6 +98,13 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#features">Funcionalidades</a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link btn-outline-light"
+                    href="./pages/login.html"
+                    >Acessar</a
+                  >
                 </li>
               </ul>
             </div>
