--- a/pages/login.html
+++ b/pages/login.html
@@ -8,14 +8,14 @@
       name="description"
       content="NOFITICA - Denuncias de saneamento e abastecimento."
     />
-    <link rel="icon" type="image/x-icon" href="./assets/leaf.png" />
+    <link rel="icon" type="image/x-icon" href="../assets/leaf.png" />
     <meta
       name="keywords"
       content="denuncia, abastecimento de água, sanemaneto básico, ODS 6"
     />
     <meta name="author" content="Wesley Alencar, Lorenzo Panato" />
-    <link rel="stylesheet" href="./styles/css/global.css" />
-    <link rel="stylesheet" href="../styles/css/login.css" />
+    <link rel="stylesheet" href="../styles/css/global.css" />
+    <link rel="stylesheet" href="../styles/css/register.css" />
     <link rel="stylesheet" href="../styles/css/form.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -34,24 +34,23 @@
         <h2>Entrar</h2>
 
         <form class="form-container">
-          <div class="mb-3">
-            <input type="text" class="form-control custom-input" id="formGroupExampleInput" placeholder="Nome" required>
-          </div>
-          <div class="mb-3">
-            <input type="tel" class="form-control custom-input" id="formGroupExampleInput2" placeholder="Telefone" required>
-          </div>
-          <div class="mb-3">
-            <input type="text" class="form-control custom-input" id="formGroupExampleInput2" placeholder="CPF" required>
-          </div>
-          <div class="mb-3">
-            <input type="text" class="form-control custom-input" id="formGroupExampleInput2" placeholder="Senha" required>
-          </div>
-          <div class="mb-3">
-            <input type="text" class="form-control custom-input" id="formGroupExampleInput2" placeholder="Repita a senha" required>
-          </div>
+            <div class="mb-3">
+                <input type="text" class="form-control custom-input" id="formGroupExampleInput" placeholder="CPF ou telefone" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}|\(\d{2}\) \d{4,5}-\d{4}" required>
+            </div>
+            <div class="mb-3">
+                <input type="text" class="form-control custom-input" id="formGroupExampleInput2" placeholder="Senha" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
+            </div>
 
-          <p>Já tem uma conta? <a href="#">Entrar</a></p>
-          <button type="submit">Entrar</button>
+            <div class="form-check custom-checkbox-container">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" required>
+              <label class="form-check-label" for="flexCheckDefault">
+                Eu quero receber emails de denúncias feitas perto de mim
+              </label>
+            </div>
+
+            <a href="#">Esqueceu sua senha?</a>
+            <p>Entrar sem conta? <a href="#">Entrar</a></p>
+            <button type="submit">Entrar</button>
         </form>
     </main>
 </body>
