fix: fixing form links

--- a/pages/login.html
+++ b/pages/login.html
@@ -49,7 +49,7 @@
             </div>
 
             <a href="#">Esqueceu sua senha?</a>
-            <p>Entrar sem conta? <a href="#">Entrar</a></p>
+            <p>Não possui uma conta? <a href="./register.html">Cadastre-se</a></p>
             <button type="submit">Entrar</button>
         </form>
     </main>
