--- a/pages/register.html
+++ b/pages/register.html
@@ -57,7 +57,7 @@
             </label>
           </div>
 
-          <p>Já tem uma conta? <a href="#">Entrar</a></p>
+          <p>Já possui uma conta? <a href="./login.html">Entrar</a></p>
           <button type="submit">Cadastrar</button>
         </form>
     </main>
