feat: add new image

--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
     <main>
       <section id="introduction" class="introduction">
         <div class="description">
+          <img
+            class="head-img"
+            src="./assets/head-img-peoples.png"
+            alt="Fotos de bonecos sobre natureza"
+          />
           <h1>Relate, Contribua, Transforme.</h1>
           <p>
             Seja parte da mudança: Junte-se a nós na melhoria do abastecimento
