feat: add hover effects to header

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <header>
       <nav class="navbar custom-nav">
         <div class="menu">
-          <a class="navbar-brand custom-logo" href="#">NOTIFICA</a>
+          <a class="custom-logo" href="./index.html">NOTIFICA</a>
           <nav class="custom-navbar" id="nav-light">
-            <a href="#introduction" class="btn">Introdução</a>
-            <a href="#about" class="btn">Sobre a ODS 6</a>
-            <a href="#features" class="btn">Funcionalidades</a>
+            <a href="#introduction" class="custom-navbar-link">Introdução</a>
+            <a href="#about" class="custom-navbar-link">Sobre a ODS 6</a>
+            <a href="#features" class="custom-navbar-link">Funcionalidades</a>
             <a href="./pages/login.html" class="btn btn-outline-light"
               >Acessar</a
             >
