--- a/pages/home.html
+++ b/pages/home.html
@@ -31,12 +31,12 @@
     <header>
       <nav class="navbar custom-nav">
         <div class="menu">
-          <a class="navbar-brand custom-logo" href="#">NOTIFICA</a>
+          <a class="custom-logo" href="../index.html">NOTIFICA</a>
           <nav class="custom-navbar" id="nav-light">
-            <a href="#" class="btn"
+            <a href="#" class="custom-navbar-link"
               ><i class="bi bi-plus-circle"></i> Nova Denuncia</a
             >
-            <a href="#" class="btn">
+            <a href="#" class="custom-navbar-link">
               <i class="bi bi-person-circle"></i> Meu Perfil</a
             >
             <a href="../index.html" class="btn btn-outline-light"
