--- a/pages/login.html
+++ b/pages/login.html
@@ -33,7 +33,7 @@
         <h1>NOTIFICA</h1>
         <h2>Entrar</h2>
 
-        <form class="form-container">
+        <form class="form-container" action="./home.html">
             <div class="mb-3">
                 <input type="text" class="form-control custom-input" id="formGroupExampleInput" placeholder="CPF ou telefone" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}|\(\d{2}\) \d{4,5}-\d{4}" required>
             </div>
