fix: checkbox is not required

--- a/pages/register.html
+++ b/pages/register.html
@@ -33,7 +33,7 @@
         <h1>NOTIFICA</h1>
         <h2>Cadastrar</h2>
 
-        <form class="form-container">
+        <form class="form-container" action="./login.html">
           <div class="mb-3">
             <input type="text" class="form-control custom-input" id="formGroupExampleInput" placeholder="Nome" required>
           </div>
@@ -51,7 +51,7 @@
           </div>
 
           <div class="form-check custom-checkbox-container">
-            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" required>
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
             <label class="form-check-label" for="flexCheckDefault">
               Eu quero receber emails de denúncias feitas perto de mim
             </label>
