--- a/pages/login.html
+++ b/pages/login.html
@@ -42,7 +42,7 @@
             </div>
 
             <div class="form-check custom-checkbox-container">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" required>
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
               <label class="form-check-label" for="flexCheckDefault">
                 Eu quero receber emails de denúncias feitas perto de mim
               </label>
