refactor: color of a

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </li>
                 <li class="nav-item">
                   <a
-                    class="nav-link btn-outline-light"
+                    class="nav-link btn-outline-dark text-black"
                     href="./pages/login.html"
                     >Acessar</a
                   >
