refactor: styles of home

--- a/pages/home.html
+++ b/pages/home.html
@@ -8,7 +8,7 @@
       name="description"
       content="NOFITICA - Denuncias de saneamento e abastecimento."
     />
-    <link rel="icon" type="image/x-icon" href="./assets/leaf.png" />
+    <link rel="icon" type="image/x-icon" href="../assets/leaf.png" />
     <meta
       name="keywords"
       content="denuncia, abastecimento de água, sanemaneto básico, ODS 6"
@@ -109,7 +109,9 @@
     </header>
     <main>
       <section id="hot-complaints" class="hot-complaints">
-        <h2>Denúncias em alta</h2>
+        <h3 class="section-title">
+          <i class="bi bi-fire" style="color: #ce3030"></i> Denúncias em alta
+        </h3>
         <div class="hot-complaints-cards">
           <div class="card custom-card">
             <div class="people">
@@ -121,7 +123,9 @@
                 />
                 <div class="people-desc">
                   <p>André Fernandes</p>
-                  <span>56 Denúncias</span>
+                  <span
+                    ><i class="bi bi-check-circle-fill"></i> 56 Denúncias</span
+                  >
                 </div>
               </div>
               <button class="btn">
@@ -172,7 +176,9 @@
                 />
                 <div class="people-desc">
                   <p>André Fernandes</p>
-                  <span>56 Denúncias</span>
+                  <span
+                    ><i class="bi bi-check-circle-fill"></i> 56 Denúncias</span
+                  >
                 </div>
               </div>
               <button class="btn">
@@ -223,7 +229,9 @@
                 />
                 <div class="people-desc">
                   <p>André Fernandes</p>
-                  <span>56 Denúncias</span>
+                  <span
+                    ><i class="bi bi-check-circle-fill"></i> 56 Denúncias</span
+                  >
                 </div>
               </div>
               <button class="btn">
@@ -274,7 +282,9 @@
                 />
                 <div class="people-desc">
                   <p>André Fernandes</p>
-                  <span>56 Denúncias</span>
+                  <span
+                    ><i class="bi bi-check-circle-fill"></i> 56 Denúncias</span
+                  >
                 </div>
               </div>
               <button class="btn">
@@ -325,7 +335,9 @@
                 />
                 <div class="people-desc">
                   <p>André Fernandes</p>
-                  <span>56 Denúncias</span>
+                  <span
+                    ><i class="bi bi-check-circle-fill"></i> 56 Denúncias</span
+                  >
                 </div>
               </div>
               <button class="btn">
@@ -376,7 +388,9 @@
                 />
                 <div class="people-desc">
                   <p>André Fernandes</p>
-                  <span>56 Denúncias</span>
+                  <span
+                    ><i class="bi bi-check-circle-fill"></i> 56 Denúncias</span
+                  >
                 </div>
               </div>
               <button class="btn">
@@ -420,7 +434,10 @@
         </div>
       </section>
       <section id="map-statistcs" class="map-statistcs">
-        <h2>Estatísticas no Mapa</h2>
+        <h3 class="section-title">
+          <i class="bi bi-globe-americas" style="color: #2ea06a"></i>
+          Estatísticas no Mapa
+        </h3>
         <div class="map-container">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15841.53087278776!2d-35.71350418816471!3d-6.964098439102407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ac3234c0d63aa5%3A0xe324089f03516f32!2sAreia%2C%20PB%2C%2058397-000!5e0!3m2!1spt-BR!2sbr!4v1704410439682!5m2!1spt-BR!2sbr"
