fix: add password type to input

--- a/pages/login.html
+++ b/pages/login.html
@@ -38,7 +38,7 @@
                 <input type="text" class="form-control custom-input" id="formGroupExampleInput" placeholder="CPF ou telefone" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}|\(\d{2}\) \d{4,5}-\d{4}" required>
             </div>
             <div class="mb-3">
-                <input type="text" class="form-control custom-input" id="formGroupExampleInput2" placeholder="Senha" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
+                <input type="password" class="form-control custom-input" id="formGroupExampleInput2" placeholder="Senha" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
             </div>
 
             <div class="form-check custom-checkbox-container">
