--- a/pages/register.html
+++ b/pages/register.html
@@ -44,10 +44,10 @@
             <input type="text" class="form-control custom-input" id="formGroupExampleInput2" placeholder="CPF" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required>
           </div>
           <div class="mb-3">
-            <input type="text" class="form-control custom-input" id="formGroupExampleInput2" placeholder="Senha" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
+            <input type="password" class="form-control custom-input" id="formGroupExampleInput2" placeholder="Senha" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
           </div>
           <div class="mb-3">
-            <input type="text" class="form-control custom-input" id="formGroupExampleInput2" placeholder="Repita a senha" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
+            <input type="password" class="form-control custom-input" id="formGroupExampleInput2" placeholder="Repita a senha" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
           </div>
 
           <div class="form-check custom-checkbox-container">
