refactor: acessibility os buttons

--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NOTIFICA</title>
+    <title>NOTIFICA | Início</title>
     <meta
       name="description"
       content="NOFITICA - Denuncias de saneamento e abastecimento."
@@ -128,7 +128,10 @@
                   >
                 </div>
               </div>
-              <button class="btn">
+              <button
+                class="btn"
+                aria-label="Botão de mais opções para essa denúncia"
+              >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="30"
@@ -181,7 +184,10 @@
                   >
                 </div>
               </div>
-              <button class="btn">
+              <button
+                class="btn"
+                aria-label="Botão de mais opções para essa denúncia"
+              >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="30"
@@ -234,7 +240,10 @@
                   >
                 </div>
               </div>
-              <button class="btn">
+              <button
+                class="btn"
+                aria-label="Botão de mais opções para essa denúncia"
+              >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="30"
@@ -287,7 +296,10 @@
                   >
                 </div>
               </div>
-              <button class="btn">
+              <button
+                class="btn"
+                aria-label="Botão de mais opções para essa denúncia"
+              >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="30"
@@ -340,7 +352,10 @@
                   >
                 </div>
               </div>
-              <button class="btn">
+              <button
+                class="btn"
+                aria-label="Botão de mais opções para essa denúncia"
+              >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="30"
@@ -393,7 +408,122 @@
                   >
                 </div>
               </div>
-              <button class="btn">
+              <button
+                class="btn"
+                aria-label="Botão de mais opções para essa denúncia"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="30"
+                  height="30"
+                  fill="currentColor"
+                  class="bi bi-three-dots-vertical"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"
+                  />
+                </svg>
+              </button>
+            </div>
+            <img
+              src="../assets/card-img.jpeg"
+              class="img-card"
+              alt="Foto da denuncia"
+            />
+            <div class="card-categories">
+              <span class="card-category" style="background-color: #30a3e3">
+                <i class="bi bi-droplet-half"></i>
+                Abastecimento
+              </span>
+              <span class="card-category" style="background-color: #ce3030">
+                <i class="bi bi-exclamation-circle-fill"></i>
+                Crítico
+              </span>
+            </div>
+            <div class="card-body">
+              <h3>Retorno em Santana</h3>
+              <p>
+                Finalmente a água voltou aqui no Bairro Santana, após 3 dias sem
+                uma gota.
+              </p>
+            </div>
+          </div>
+          <div class="card custom-card">
+            <div class="people">
+              <div class="head-people">
+                <img
+                  src="../assets/avatar.png"
+                  class="avatar-card"
+                  alt="Foto de André Fernandes"
+                />
+                <div class="people-desc">
+                  <p>André Fernandes</p>
+                  <span
+                    ><i class="bi bi-check-circle-fill"></i> 56 Denúncias</span
+                  >
+                </div>
+              </div>
+              <button
+                class="btn"
+                aria-label="Botão de mais opções para essa denúncia"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="30"
+                  height="30"
+                  fill="currentColor"
+                  class="bi bi-three-dots-vertical"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"
+                  />
+                </svg>
+              </button>
+            </div>
+            <img
+              src="../assets/card-img.jpeg"
+              class="img-card"
+              alt="Foto da denuncia"
+            />
+            <div class="card-categories">
+              <span class="card-category" style="background-color: #30a3e3">
+                <i class="bi bi-droplet-half"></i>
+                Abastecimento
+              </span>
+              <span class="card-category" style="background-color: #ce3030">
+                <i class="bi bi-exclamation-circle-fill"></i>
+                Crítico
+              </span>
+            </div>
+            <div class="card-body">
+              <h3>Retorno em Santana</h3>
+              <p>
+                Finalmente a água voltou aqui no Bairro Santana, após 3 dias sem
+                uma gota.
+              </p>
+            </div>
+          </div>
+          <div class="card custom-card">
+            <div class="people">
+              <div class="head-people">
+                <img
+                  src="../assets/avatar.png"
+                  class="avatar-card"
+                  alt="Foto de André Fernandes"
+                />
+                <div class="people-desc">
+                  <p>André Fernandes</p>
+                  <span
+                    ><i class="bi bi-check-circle-fill"></i> 56 Denúncias</span
+                  >
+                </div>
+              </div>
+              <button
+                class="btn"
+                aria-label="Botão de mais opções para essa denúncia"
+              >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="30"
@@ -444,6 +574,7 @@
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
+            title="Mapa de denúncias (Paraíba)"
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
         </div>
