--- a/pages/register.html
+++ b/pages/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NOTIFICA</title>
+    <title>NOTIFICA | Cadastro</title>
     <meta
       name="description"
       content="NOFITICA - Denuncias de saneamento e abastecimento."
